syntax = "proto3";

option go_package = "/pb/auth";

package auth;

service Auth{
  rpc HealthCheck(Request) returns (Response);
  rpc GroupHostPermission(GroupHostPermissionRequest) returns (GroupHostPermissionResponse){}
  rpc GroupParticipantPermission(GroupParticipantPermissionRequest) returns (GroupParticipantPermissionResponse){}
  rpc PublicHostPermission(PublicHostPermissionRequest) returns (PublicHostPermissionResponse){}
  rpc PublicParticipantPermission(PublicParticipantPermissionRequest) returns (PublicParticipantPermissionResponse){}
}

message Request {
  string data = 1;
}

message Response {
  string result = 1;
}

message GroupHostPermissionRequest{
  string userID = 1;
  string groupID = 2;
}

message GroupHostPermissionResponse{
  bool  permission = 1;
}

message GroupParticipantPermissionRequest{
  string userID = 1;
  string groupID = 2;
}

message GroupParticipantPermissionResponse{
  bool  permission = 1;
}

message PublicHostPermissionRequest{
  string userID = 1;
}

message PublicHostPermissionResponse{
  bool  permission = 1;
}

message PublicParticipantPermissionRequest{
  string userID = 1;
}

message PublicParticipantPermissionResponse{
  bool  permission = 1;
}